// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`tscTask using 'tscTask' function with 'build' option where 'build' is custom path and tsconfig.json exists execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--build",
  "a/custom/path/tsconfig.json",
]
`;

exports[`tscTask using 'tscTask' function with 'build' option where 'build' is multiple paths and they all exist execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--build",
  "project/a/tsconfig.json",
  "project/b/tsconfig.json",
  "project/c/tsconfig.json",
]
`;

exports[`tscTask using 'tscTask' function with 'project' option where 'project' is custom path and tsconfig.json exists execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--project",
  "a/custom/path/tsconfig.json",
]
`;

exports[`tscTask using 'tscTask' function with a boolean 'false' switch execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--project",
  "\${packageRoot}/tsconfig.json",
]
`;

exports[`tscTask using 'tscTask' function with a boolean 'true' switch execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--allowJs",
  "--project",
  "\${packageRoot}/tsconfig.json",
]
`;

exports[`tscTask using 'tscTask' function with a combination of switches execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--allowJs",
  "--build",
  "tsconfig.json",
  "--outDir",
  "some/out/path",
]
`;

exports[`tscTask using 'tscTask' function with empty options execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--project",
  "\${packageRoot}/tsconfig.json",
]
`;

exports[`tscTask using 'tscTask' function with no arguments execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--project",
  "\${packageRoot}/tsconfig.json",
]
`;

exports[`tscTask using 'tscTask' function with string array option execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--lib",
  "es6",
  "dom",
  "esnext.intl",
  "--project",
  "\${packageRoot}/tsconfig.json",
]
`;

exports[`tscTask using 'tscTask' function with string value option execs expected command 1`] = `
[
  "\${nodeExePath}",
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--module",
  "ESNext",
  "--project",
  "\${packageRoot}/tsconfig.json",
]
`;

exports[`tscTask using 'tscWatchTask' function with 'build' option where 'build' is custom path and tsconfig.json exists execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--build",
  "a/custom/path/tsconfig.json",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with 'build' option where 'build' is multiple paths and they all exist execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--build",
  "project/a/tsconfig.json",
  "project/b/tsconfig.json",
  "project/c/tsconfig.json",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with 'project' option where 'project' is custom path and tsconfig.json exists execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--project",
  "a/custom/path/tsconfig.json",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with a boolean 'false' switch execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--project",
  "\${packageRoot}/tsconfig.json",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with a boolean 'true' switch execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--allowJs",
  "--project",
  "\${packageRoot}/tsconfig.json",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with a combination of switches execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--allowJs",
  "--build",
  "tsconfig.json",
  "--outDir",
  "some/out/path",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with empty options execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--project",
  "\${packageRoot}/tsconfig.json",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with no arguments execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--project",
  "\${packageRoot}/tsconfig.json",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with string array option execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--lib",
  "es6",
  "dom",
  "esnext.intl",
  "--project",
  "\${packageRoot}/tsconfig.json",
  "--watch",
]
`;

exports[`tscTask using 'tscWatchTask' function with string value option execs expected command 1`] = `
[
  "\${repoRoot}/node_modules/typescript/lib/tsc.js",
  "--module",
  "ESNext",
  "--project",
  "\${packageRoot}/tsconfig.json",
  "--watch",
]
`;
